--- a/mirco-web/react15-project/src/pages/informationLast/index.scss
+++ b/mirco-web/react15-project/src/pages/informationLast/index.scss
@@ -1,4 +1,4 @@
-.information{
+.information-last{
   &-container{
     width: 100%;
   }
@@ -15,4 +15,5 @@
     flex: 1;
     padding-top: 30px;
   }
+
 }
