--- a/mirco-web/react15-project/src/pages/videoLast/index.scss
+++ b/mirco-web/react15-project/src/pages/videoLast/index.scss
@@ -1,7 +1,8 @@
-.information{
+.video-last{
   &-container{
     width: 100%;
   }
+
   &-content{
     width: 1200px;
     margin: 0 auto;
@@ -13,6 +14,5 @@
   }
   &-news{
     flex: 1;
-    padding-top: 30px;
   }
 }
